--- a/ImageGallery.html
+++ b/ImageGallery.html
@@ -5,10 +5,14 @@
 <style type="text/css">
 .jumbotron{
   background: rgba(88, 100, 107,0.7);
-  backface-visibility: hidden;
   border: 1px solid black;
   margin-top: 5em;;
   padding: 16px;
+}
+
+.navbar-inverse
+{
+  background : /* background color of your choice */
 }
 
 body
@@ -49,7 +53,8 @@ body
   <div class="container">
     <div class="jumbotron">
       <h1><span class="glyphicon glyphicon-camera"aria-hidden="true"></span> Gallery By Aniket</h1>
-      <p>A Collection of beautiful Images</p>
+      <hr></hr>
+      <p id="color-ch">A Collection of beautiful Images</p>
     </div>
   </div>
 
