first trial at view fix

--- a/ImageGallery.html
+++ b/ImageGallery.html
@@ -1,7 +1,9 @@
 <html>
 
 <head>
+  <meta charset="utf-8">
 <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.css">
+<meta name="viewport" content="width=device-width, user-scalable=no">
 <style type="text/css">
 .jumbotron{
   background: rgba(88, 100, 107,0.7);
