--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@ body
   background: url("images/frontpage.jpg");
   background-size:cover;
   background-attachment: fixed;
-  background-position: center;
+  background-position: center center;
+  background-repeat: no-repeat;
 }
 h1{
   font-size: 2em;
