--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@ body
   background: url("images/frontpage.jpg");
   background-size:cover;
   background-attachment: fixed;
-  background-position: center center;
-  background-repeat: no-repeat;
+  background-position: center;
+   background-blend-mode:lighten;
 }
 h1{
   font-size: 2em;
